# Imagefork

./: .dockerignore  .env  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  Trunk.toml  build.rs  diesel.toml  docker-compose.yml  imagefork.earthmark.dev.yaml  imagefork.postgres.yaml  imagefork.redis.yaml  imagefork.toml  package-lock.json  package.json  sqlx-data.json  wrangler.json
.github/workflows/: docker-image.yml
.sqlx/: query-0cb45a90eb79fa04f98f1509a7f14b4a2d60d9cc6f53f5d92927da411eda3cdc.json  query-163bab6a133d0c45d70032e8d16763da521e82faa1c5793d0c695b1dfebdd60d.json  query-2a9e5604dffa7eb1d72aa0fcfbba451cac6463c0b8e6e32dd59acb172d47caad.json  query-2c9f18601d3a574c1a0756e96a0a81d393000750a1dcc684b284388b3baa0c64.json  query-3d16d3765f027c89c94d3eeae5968de9650d0bf13fbcdcda27044defb79eb0a7.json  query-4fd3fccace20630823a6407bce7a820d86a3dd3f0dd3e2a84441947706600f28.json  query-50d93f08730bf0a5a6b51ffc2042900a1f9f365e3a3244d33504aa2d32b85807.json  query-592952a8cacb770bc829aa19af8a6573c953aa704537b1c840321fce8fc6abbc.json  query-6e149c176975b684eb8f01df06e7e437c240353da3993e28b3f94bd174768881.json  query-7b9cd63bdd8b610ba5c564292ab3ec3a0cfd14e73f3dfe579773e00663f0ae37.json  query-a60a6089c70b14165fc1d85ee53680d436a8409c6e2e0c5d9af838cfe927ab9d.json  query-ac1f4e106d53cfd1ca3f1197dc9d29b54d438ebb77ec3d40f1871c223b711c4c.json  query-c5422a8474105825605929120246fedeb2e8dbcd3949e2108e9355a6c4b8ff80.json  query-dc9b4f7024fe2301aa1137d261e4e4cf7eafb21e5ff24d3991e1145eb9890d8e.json  query-ee2daaab166ae28dd303773afe804e10b41d21c1ef4a56a31861ece84dbe3491.json
client/: Cargo.toml  README.md  index.html  package-lock.json  package.json
imagefork/: package-lock.json  tsconfig.json  wrangler.json
migrations/: 0001_initial.sql  0_initial.down.sql  0_initial.up.sql  1_fix_default_stopped.up.sql  1_multi_maps.down.sql  1_multi_maps.up.sql  20250126090139_initial.down.sql  20250126090139_initial.up.sql
migrations/2024-12-01-031642_initial/: down.sql  up.sql
migrations/2025-01-11-230702_oauth/: down.sql  up.sql
portal/: env.d.ts  next.config.ts  package.json  query.sql  tsconfig.json  wrangler.json
portal/messages/: en.json
portal/src/: auth.ts  db.ts
portal/src/app/: DashboardFrame.tsx  Loading.tsx  PosterViewer.tsx  PosterViewerLazy.ts  layout.tsx  page.tsx
portal/src/app/login/: About.tsx  page.tsx
portal/src/app/poster/: NewPosterButton.tsx  page.tsx
portal/src/app/poster/[id]/: page.tsx
portal/src/components/: Login.tsx
portal/src/components/Dash/: Header.tsx  index.tsx
proto/: imagefork.proto  user.proto
queries/: add_creator.sql  add_poster.sql  can_post.sql
redirect/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.json
redirect/src/: index.ts
server/: Rocket.toml
server/migrations/: 1_fix_default_stopped.down.sql
server/src/: cache.rs
server/src/portal/: mod.rs  posters.rs  ui.rs
server/templates/: base.html.hbs  posters.html.hbs
src/: auth.rs  cache.rs  client.rs  config.rs  either_resp.rs  error.rs  html.rs  image.rs  image_meta.rs  into_inner.rs  main.rs  portal.rs  protos.rs  redirect.rs  schema.rs  service.rs  session.rs  store.rs  swagger.rs
src/db/: creator.rs  creator_session.rs  creator_token.rs  crsf_session.rs  mod.rs  poster.rs  poster_image.rs  util.rs
src/portal/: auth.rs  creators.rs  mod.rs  posters.rs  routes.rs  token.rs  ui.rs
src/portal/auth/: github.rs  mod.rs
src/redirect/: mod.rs
src/reqs/: client.rs  github.rs  mod.rs
src/responders/: mod.rs  or.rs  proto.rs  textproto.rs
templates/: about.html.hbs  base.html  base.html.hbs  card.html.hbs  creator.html  error.html.hbs  index.html.hbs  posters.html.hbs
