[package]
name = "imagefork"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "*", features = ["with-axum"] }
async-trait = "*"
axum = { version = "*", features = ["tower-log", "macros"] }
axum-extra = { version = "*", features = ["typed-header"] }
axum-login = "*"
axum-prometheus = "*"
base64 = "*"
bb8 = "*"
bb8-diesel = "*"
bb8-redis = "*"
diesel = { version = "*", features = ["time"] }
diesel-async = { version = "*", features = ["postgres", "bb8"] }
figment = { version = "*", features = ["env", "toml"] }
image = { version = "*", features = ["libwebp", "rgb"] }
lazy_static = "*"
mediatype = { version = "*", features = ["serde"] }
metrics = "*"
metrics-exporter-prometheus = "*"
oauth2 = "*"
rand = "*"
reqwest = { version = "*", features = ["json"] }
reqwest-middleware = { version = "*", features = ["json"] }
reqwest-retry = { version = "*", features = ["tracing"] }
reqwest-tracing = "*"
rmp-serde = "*"
rust-embed = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sha2 = "*"
thiserror = "*"
time = "*"
tokio = { version = "*", features = ["full"] }
tower-sessions = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
uuid = { version = "*", features = ["serde"] }
